# skaffold2ci

./: .bumpversion.cfg  .cruft.json  .dockerignore  .flake8  .gitchangelog.rc  .gitignore  .gitlab-ci.yml  .pylintrc  .python-version  Dockerfile  GitVersion.yml  README.md  invoke.yaml  mypy.ini  poetry.toml  pyproject.toml
.github/workflows/: publish-image.yml
docs/: README  README.md  api.rst  conf.py  index.rst
docs/develop/: 02-version-control.rst  05-features.rst
docs/gitlab/: 01-gitlab.rst
skaffold2ci/: __init__.py  gitinfo.py  gitlabci.py  helmfixer.py  skaffold2ci.py  skaffoldyaml.py  version.py
tasks/: __init__.py  ado.py  docs.py  test.py
tests/: conftest.py  test_skaffold2ci.py  test_version.py
